<resources>
    <string name="app_name">GameNews</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="text_titulo_de_noticia">TITULO DE NOTICIA</string>
    <string name="text_descripcion_de_noticias">Descripcion de noticias</string>
    <string name="text_categoria">Category</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_ingresar">LOG IN</string>
    <string name="text_terminos_y_condiciones">Terms and conditions</string>
    <string name="text_ups_the_credentials_are_wrongs">Ups... The credentials are wrongs</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_nombre_de_jugador">Nombre de jugador</string>
    <string name="text_biografia">Biografia</string>
    <string name="text_favorites">Favorites</string>
    <string name="text_first_date">First Date</string>
    <string name="text_security">Security</string>
    <string name="text_user_information">User Information</string>
    <string name="text_old_password">Old Password</string>
    <string name="text_new_password">New Password</string>
    <string name="text_repeat_password">Repeat Password</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_search">Search</string>
    <string name="text_no_conection">No internet, can have issues experience </string>
    <string name="text_no_update">Error connection, no updated</string>
    <string name="token_exedded">Session time exceeded, Please login again</string>
    <string name="success_password">Password changed successfuly</string>
    <string name="add_fav">Added to favorites</string>
    <string name="remove_fav">Removed from favorites</string>
</resources>
