<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LogginActivity"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:gravity="center_vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="32dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bungee_inline"
                android:text="Game"
                android:textSize="26sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bungee_inline"
                android:text="News"
                android:textSize="26sp"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>
        <TextView
            android:id="@+id/text_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_ups_the_credentials_are_wrongs"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:visibility="invisible"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:src="@drawable/ic_person_white"
                />
            <EditText
                android:id="@+id/text_username_loggin"
                android:layout_marginLeft="8dp"
                android:layout_weight="0.9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_username"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:src="@drawable/ic_lock_white"
                />
            <EditText
                android:id="@+id/text_password_loggin"
                android:layout_marginLeft="8dp"
                android:layout_weight="0.9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_password"
                android:inputType="textPassword"
                />
        </LinearLayout>
        <Button
            android:id="@+id/btn_loggin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_ingresar"
            android:layout_marginBottom="32dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_terminos_y_condiciones"
            android:gravity="center"
            android:textStyle="italic"/>

    </LinearLayout>

</LinearLayout>