<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_margin="4dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageview_news"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/ic_launcher_background"
            android:scaleType="centerCrop"/>
        <LinearLayout
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_weight="0.5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/text_title_news"
                    android:layout_weight="0.99"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_titulo_de_noticia"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:layout_margin="4dp"
                    />
                <TextView
                    android:id="@+id/text_fab"
                    android:layout_weight="0.01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_favorite_grey"
                    android:textSize="22sp"
                    android:layout_margin="4dp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/text_description_news"
                android:layout_weight="0.35"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/text_descripcion_de_noticias"
                android:layout_marginLeft="8dp"
                android:textSize="14sp"
                />
            <LinearLayout
                android:layout_weight="0.15"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:gravity="bottom"
                android:layout_marginBottom="4dp">
                <TextView
                    android:layout_weight="0.5"
                    android:id="@+id/text_date_news"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="0000-00-00"
                    android:layout_marginLeft="8dp"
                    android:textSize="14sp"
                    />
                <TextView
                    android:gravity="end"
                    android:layout_weight="0.5"
                    android:id="@+id/text_category_news"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_categoria"
                    android:layout_marginRight="8dp"
                    android:textSize="14sp"
                    />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>