<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ModifyProfile"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar">
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:contentScrim="?attr/colorAccent"
            app:title="Profile"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            android:background="@drawable/material_bg">
            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/avatar_profile"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:src="@drawable/ic_profile"/>
                <TextView
                    android:id="@+id/nickname_main_profile"
                    android:layout_marginTop="18dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nickname"
                    android:textSize="26sp"
                    android:textColor="@android:color/white"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <LinearLayout
                        android:layout_weight="0.5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_favorites"
                            android:textSize="22sp"
                            android:textColor="@android:color/white"/>
                        <TextView
                            android:id="@+id/favorites_count_profile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="22sp"
                            android:text="0"
                            android:textColor="@android:color/white"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_weight="0.5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_first_date"
                            android:textSize="22sp"
                            android:textColor="@android:color/white"/>
                        <TextView
                            android:id="@+id/created_date_profile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="22sp"
                            android:text="0"
                            android:textColor="@android:color/white"/>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
            <android.support.v7.widget.Toolbar
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="parallax">

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_user_information"
                android:textColor="@color/colorPrincipalText"
                android:layout_margin="16dp"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                android:layout_margin="4dp">
                <TextView
                    android:id="@+id/text_user_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_username"
                    android:drawableStart="@drawable/ic_person_black"
                    android:textSize="20sp"
                    android:drawablePadding="16dp"
                    android:layout_margin="16dp"/>
            </android.support.v7.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_security"
                android:textColor="@color/colorPrincipalText"
                android:layout_margin="16dp"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <android.support.v7.widget.CardView
                android:id="@+id/btn_change_password_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                android:layout_margin="4dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Change Password"
                    android:drawableStart="@drawable/ic_lock_black_24dp"
                    android:textSize="20sp"
                    android:drawablePadding="16dp"
                    android:layout_margin="16dp"/>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>




</android.support.design.widget.CoordinatorLayout>